Fix Text-Overflow on Special:AllPages (master)
Fixed design-bug with text-overflow on Special:AllPages when a pagetitle is too long.

Commit is for master-branch

Improve text-columns.

Related to ERM12866.

--- a/resources/stylesheets/fixes/desktop.specialpages.less
+++ b/resources/stylesheets/fixes/desktop.specialpages.less
@@ -27,3 +27,10 @@
 {
 	color: #fff !important;
 }
+
+/*Special:AllPages*/
+body.ns-special .mw-allpages-body {
+	columns: 32em 2;
+	-moz-columns: 32em 2;
+	-webkit-columns: 32em 2;
+}
